[tool.poetry]
name = "cronjobs"
version = "0.1.0"
description = ""
authors = ["sky <skyblue3350@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
slack-sdk = "^3.18.1"
termcolor = "^1.1.0"
beautifulsoup4 = "^4.11.1"
jpholiday = "^0.1.8"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
